gcc/testsuite/g++.dg/template/meminit1.C
template <class T >
struct S
{
  S() : S() {} // { dg-error "base" }
};

S<int> s; // { dg-error "instantiated" }
